--- a/openstack_dashboard/dashboards/project/volumes/templates/volumes/_create_snapshot.html
+++ b/openstack_dashboard/dashboards/project/volumes/templates/volumes/_create_snapshot.html
@@ -9,15 +9,14 @@
 {% block modal-header %}{% trans "Create Volume Snapshot" %}{% endblock %}
 
 {% block modal-body %}
-<div class="left">
-  <fieldset>
-  {% include "horizon/common/_form_fields.html" %}
-  </fieldset>
-</div>
-<div class="right">
-  <h3>{% trans "Description" %}:</h3>
-  <p>{% trans "Volumes are block devices that can be attached to instances." %}</p>
-</div>
+  <div class="left">
+    <fieldset>
+    {% include "horizon/common/_form_fields.html" %}
+    </fieldset>
+  </div>
+  <div class="right quota-dynamic">
+    {% include "project/volumes/_quota.html" with usages=usages snapshot_quota=True %}
+  </div>
 {% endblock %}
 
 {% block modal-footer %}
