--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -607,7 +607,202 @@ table form {
     button.btn-delete, button.btn-terminate {
       .btn-icon-danger(-451px, 5px);
     }
+}
 
+td.no-transition {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -o-transition: none !important;
+  -ms-transition: none !important;
+  transition: none !important;
+}
+
+td.success {
+  background-color: #dff0d8 !important;
+}
+td.loading {
+  background-color: #e6e6e6 !important;
+}
+
+.btn-icon-inline_edit(@x, @y, @top: 1px, @left: 5px, @icons: "/static/bootstrap/img/glyphicons-halflings.png") {
+    padding: 9px 12px 9px 12px;
+    position: relative;
+    border-radius: 0px;
+
+    &:before {
+        display: inline-block;
+        content: "";
+        width: 18px;
+        height: 20px;
+        margin-top: 0px;
+        *margin-right: .3em;
+        line-height: 14px;
+        background-image: url(@icons);
+        background-position: @x @y;
+        background-repeat: no-repeat;
+        position: absolute;
+        top: @top;
+        left: @left;
+    }
+}
+
+td.inline_edit_available  {
+  div.table_cell_wrapper {
+    .table_cell_action {
+      button.ajax-inline-edit {
+        .btn-icon-inline_edit(0, -72px, 2px, 4px);
+
+        padding: 10px 10px 10px 10px;
+        position: relative;
+        display: block;
+        background: none;
+        border: 0 none;
+      }
+    }
+  }
+}
+
+ .btn-icon-inline-actions(@x, @y, @top: 1px, @left: 5px, @icons: "/static/bootstrap/img/glyphicons-halflings.png") {
+    padding: 9px 12px 9px 12px;
+    position: relative;
+    border-radius: 0px;
+
+    &:before {
+        display: inline-block;
+        content: "";
+        width: 18px;
+        height: 20px;
+        margin-top: 0px;
+        *margin-right: .3em;
+        line-height: 14px;
+        background-image: url(@icons);
+        background-position: @x @y;
+        background-repeat: no-repeat;
+        position: absolute;
+        top: @top;
+        left: @left;
+    }
+}
+
+.status-icon(@x, @y, @top: 1px, @left: 5px, @icons: "/static/bootstrap/img/glyphicons-halflings.png") {
+  padding: 9px 12px 9px 12px;
+  position: relative;
+  border-radius: 0px;
+
+  &:before {
+      display: inline-block;
+      content: "";
+      width: 20px;
+      height: 20px;
+      margin-top: 0px;
+      *margin-right: .3em;
+      line-height: 14px;
+      background-image: url(@icons);
+      background-position: @x @y;
+      background-repeat: no-repeat;
+      position: absolute;
+      top: @top;
+      left: @left;
+  }
+}
+
+div.table_cell_wrapper {
+   min-height: 18px;
+   position: relative;
+
+  .inline-edit-label {
+    display: inline;
+  }
+
+  .inline-edit-form {
+    float: left;
+  }
+
+  .inline-edit-actions, .table_cell_action {
+    float: right;
+    width: 20px;
+    margin: 0;
+
+    button.inline-edit-cancel {
+      float: right;
+      .btn-icon-inline-actions(-312px, 0);
+    }
+
+    button.inline-edit-submit {
+      .btn-icon-inline-actions(-288px, 0, 1px, 5px, "/static/bootstrap/img/glyphicons-halflings-white.png");
+    }
+    button.ajax-inline-edit {
+      .btn-icon-inline-actions(0, -72px, 2px, 4px);
+
+      padding: 10px 10px 10px 10px;
+      position: relative;
+      display: none;
+      background: none;
+      border: 0 none;
+    }
+  }
+
+  .table_cell_action {
+    width: auto;
+
+    margin: auto 0px 0px 0px;
+    display: none;
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    z-index: 99;
+  }
+
+  .table_cell_action.hovered {
+    background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    border: 1px solid #ccc;
+    border-bottom-color: #bbb;
+    border-radius: 4px;
+  }
+
+  .inline-edit-error {
+    .error {
+      .status-icon(-144px, -120px, 0px, 0px);
+      position: absolute;
+      width: 18px;
+      height: 20px;
+
+      top: 20px;
+      left: 2px;
+      padding: 0;
+    }
+  }
+  .inline-edit-status {
+    .success {
+      .status-icon(-288px, 0px, 0px, 0px);
+      padding: 0;
+      position:absolute;
+      top: 2px;
+      right: 18px;
+
+      width: 18px;
+      height: 20px;
+      z-index: 100;
+    }
+    .loading {
+      .status-icon(0px, 0px, 0px, 0px, '/static/dashboard/img/spinner.gif');
+      padding: 0;
+      position:absolute;
+      top: 0px;
+      right: 24px;
+
+      width: 18px;
+      height: 20px;
+      z-index: 100;
+    }
+  }
+  .inline-edit-status.inline-edit-mod {
+    .loading {
+      top: 15px;
+      right: 34px;
+    }
+  }
 }
 
 .table_header .table_actions {
