Disable selection of undersized flavors for image
Where an image has minimum requirements for RAM or disk, we should
not allow users to select a flavor that does not meet those
requirements only to have the form fail when submitted.

Change-Id: I00667f4ca30a43771eaf3257fd055d3387687658
Fixes: bug 1116122

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_flavors_and_quotas.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_flavors_and_quotas.html
@@ -40,11 +40,16 @@
 </div>
 
 <script type="text/javascript" charset="utf-8">
+  some_disabled_msg = '{{_("Some flavors not meeting minimum image requirements have been disabled.")}}';
+  all_disabled_msg = '{{_("No flavors meet minimum criteria for selected image.")}})';
+
   if(typeof horizon.Quota !== 'undefined') {
     horizon.Quota.initWithFlavors({{ flavors|safe|default:"{}" }});
+    horizon.Quota.initWithImages({{ images|safe|default:"{}"}}, some_disabled_msg, all_disabled_msg);
   } else {
     addHorizonLoadEvent(function() {
       horizon.Quota.initWithFlavors({{ flavors|safe|default:"{}" }});
+      horizon.Quota.initWithImages({{ images|safe|default:"{}"}}, some_disabled_msg, all_disabled_msg);
     });
   }
 </script>
