Add RAM/disk requirements to image details
If an image has minimum disk or memory requirements, they should
be displayed in Image Detail page.

Change-Id: Ic7e75a8272c118a2e258f938c71da19746b4f0b8
Fixes: bug #1183563

--- a/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
@@ -35,6 +35,14 @@
     <dd>{{ image.container_format|default:_("None")|upper }}</dd>
     <dt>{% trans "Disk Format" %}</dt>
     <dd>{{ image.disk_format|default:_("None")|upper }}</dd>
+    {% if image.min_disk %}
+      <dt>{% trans "Min Disk" %}</dt>
+      <dd>{{ image.min_disk|diskgbformat }}</dd>
+    {% endif %}
+    {% if image.min_ram %}
+      <dt>{% trans "Min RAM" %}</dt>
+      <dd>{{ image.min_ram|mbformat }}</dd>
+    {% endif %}
   </dl>
 </div>
 
