Adding the ability to set/use domain context
Setting the domain context allows admins to view the identity
resources (projects, users, groups) for a particular domain.
The context can be set or cleared.  The default is no domain
context set.  If no context set, the current behavior of listing
all resources across domains is maintained.

Additionally, the identity panels have been grouped in a new
PanelGroup called Identity Panel to logically separate this
functionality from other service related panels.

Implements: blueprint domain-context

Change-Id: I5dd6279129824971968c20fd30919b109bf6b00a

--- a/openstack_dashboard/dashboards/admin/projects/templates/projects/usage.html
+++ b/openstack_dashboard/dashboards/admin/projects/templates/projects/usage.html
@@ -3,9 +3,7 @@
 {% block title %}{% trans "Project Usage Overview" %}{% endblock %}
 
 {% block page_header %}
-  <div class='page-header'>
-    <h2>{% trans "Project Usage" %}</h2>
-  </div>
+    {% include "horizon/common/_domain_page_header.html" with title=_("Project Usage") %}
 {% endblock %}
 
 {% block main %}
