Add general description field in image properties
It would be beneficial for us to be able to add descriptions to the
image file.

Change-Id: I8e5f9ce423f1bc76e559ffb437f255fd9717902e
Fixes: bug #1180861

--- a/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
@@ -8,6 +8,10 @@
   <dl>
     <dt>{% trans "Name" %}</dt>
     <dd>{{ image.name|default:_("None") }}</dd>
+    {% if image.properties.description %}
+      <dt>{% trans "Description" %}</dt>
+      <dd>{{ image.properties.description }}</dd>
+    {% endif %}
     <dt>{% trans "ID" %}</dt>
     <dd>{{ image.id|default:_("None") }}</dd>
     <dt>{% trans "Status" %}</dt>
