--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/detail.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/detail.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "Edit Security Group Rules" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Edit Security Group Rules") %}
+  {% include "horizon/common/_page_header.html" with title=_("Edit Security Group Rules: ")|add:security_group.name %}
 {% endblock page_header %}
 
 {% block main %}
