--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_flavors_and_quotas.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_flavors_and_quotas.html
@@ -1,5 +1,8 @@
 {% load i18n horizon humanize %}
 
+{% block help_message %}
+{% endblock %}
+
 <h4>{% trans "Flavor Details" %}</h4>
 <table class="flavor_table table-striped">
   <tbody>
@@ -13,26 +16,26 @@
 </table>
 
 <div class="quota-dynamic">
-  <h4>{% trans "Project Quotas" %}</h4>
+  <h4>{% trans "Project Limits" %}</h4>
   <div class="quota_title clearfix">
-    <strong>{% trans "Number of Instances" %} <span>({{ usages.instances.used|intcomma }})</span></strong>
-    <p>{{ usages.instances.available|quota|intcomma }}</p>
+    <strong>{% trans "Number of Instances" %}</strong>
+    {% blocktrans with used=usages.totalInstancesUsed|intcomma quota=usages.maxTotalInstances|intcomma %}<p>{{ used }} of {{ quota }} Used</p>{% endblocktrans %}
   </div>
-  <div id="quota_instances" class="quota_bar" data-progress-indicator-flavor data-quota-limit="{{ usages.instances.quota }}" data-quota-used="{{ usages.instances.used }}">
+  <div id="quota_instances" class="quota_bar" data-progress-indicator-flavor data-quota-limit="{{ usages.maxTotalInstances }}" data-quota-used="{{ usages.totalInstancesUsed }}">
   </div>
 
   <div class="quota_title clearfix">
-    <strong>{% trans "Number of VCPUs" %} <span>({{ usages.cores.used|intcomma }})</span></strong>
-    <p>{{ usages.cores.available|quota|intcomma }}</p>
+    <strong>{% trans "Number of VCPUs" %}</strong>
+    {% blocktrans with used=usages.totalCoresUsed|intcomma quota=usages.maxTotalCores|intcomma %}<p>{{ used }} of {{ quota }} Used</p>{% endblocktrans %}
   </div>
-  <div id="quota_vcpus" class="quota_bar" data-progress-indicator-flavor data-quota-limit="{{ usages.cores.quota }}" data-quota-used="{{ usages.cores.used }}">
+  <div id="quota_vcpus" class="quota_bar" data-progress-indicator-flavor data-quota-limit="{{ usages.maxTotalCores }}" data-quota-used="{{ usages.totalCoresUsed }}">
   </div>
 
   <div class="quota_title clearfix">
-    <strong>{% trans "Total RAM" %} <span>({{ usages.ram.used|intcomma }} {% trans "MB" %})</span></strong>
-    <p>{{ usages.ram.available|quota:_("MB")|intcomma }}</p>
+    <strong>{% trans "Total RAM" %}</strong>
+    {% blocktrans with used=usages.totalRAMUsed|intcomma quota=usages.maxTotalRAMSize|intcomma %}<p>{{ used }} of {{ quota }} MB Used</p>{% endblocktrans %}
   </div>
-  <div id="quota_ram" data-progress-indicator-flavor data-quota-limit="{{ usages.ram.quota }}" data-quota-used="{{ usages.ram.used }}" class="quota_bar">
+  <div id="quota_ram" data-progress-indicator-flavor data-quota-limit="{{ usages.maxTotalRAMSize }}" data-quota-used="{{ usages.totalRAMUsed }}" class="quota_bar">
   </div>
 </div>
 
