Make row actions menu visible for the lower row
In every tab on any page with a few tabs (like Load Balancers
or Access & Security pages) there is a bottom border. If any
row actions menu is too long, its bottom is hidden for the lower
row. This patch removes the line which actually prevents menu
from running below border.

fixes bug 1190548

Change-Id: I244c7ee383bebaa85e1f4db08972af37160e2185

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -953,6 +953,10 @@ td.actions_column .btn-action-required {
   font-weight: bold;
 }
 
+.tab-content {
+  overflow: visible;
+}
+
 /* Makes size consistent across browsers when mixing "btn-group" and "small" */
 .btn.hide, .btn-group .hide {
   display: none;
