Clean-up some of the workflows-related javascript
 * Initialise the workflows javascript outside modals too

  When opening the Modify Users page into a new window rather than as
  a modal form, the "All Users" and "Project Members" lists would show
  as empty as the javascript for initialising workflow wasn't
  called. Also fix similar problems in other workflows such as Edit
  Security Groups, Launch Instances' network list.

 * Avoid having the projects-specific workflow js initialised on every
   modal init

 * Move the Network List drag & drop to horizon.instances.js as it's
   unrelated to Project workflows

Also:
 * Fix a typo in help text

Fixes bug #1193007

Change-Id: If476d6babf3d93bd6e9abb051008aff4fb393436

--- a/horizon/templates/horizon/common/_workflow_step_update_members.html
+++ b/horizon/templates/horizon/common/_workflow_step_update_members.html
@@ -37,3 +37,14 @@
 <div class="hide">
   {% include "horizon/common/_form_fields.html" %}
 </div>
+
+
+<script>
+  if (typeof $ !== 'undefined') {
+    horizon.projects.workflow_init($(".workflow"));
+  } else {
+    addHorizonLoadEvent(function() {
+      horizon.projects.workflow_init($(".workflow"));
+    });
+  }
+</script>
