--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_update_networks.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_update_networks.html
@@ -33,3 +33,14 @@
     </tr>
   </tbody>
 </table>
+
+
+<script>
+  if (typeof $ !== 'undefined') {
+    horizon.instances.workflow_init($(".workflow"));
+  } else {
+    addHorizonLoadEvent(function() {
+      horizon.instances.workflow_init($(".workflow"));
+    });
+  }
+</script>
