Add ceilometerclient and bootstrap-datepicker as dependency.
Add python-ceilometerclient to the requirements.txt file
since ceilometer api depends on it.
Add bootstrap-datepicker to select date.

Implements: blueprint ceilometer

Change-Id: Ifd9c9240c770bea3304dae83d6abc79e7580a234

--- a/horizon/templates/horizon/_scripts.html
+++ b/horizon/templates/horizon/_scripts.html
@@ -19,6 +19,7 @@
 <script src="{{ STATIC_URL }}horizon/lib/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
 
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+<script src='{{ STATIC_URL }}bootstrap/js/bootstrap-datepicker.js' type='text/javascript' charset='utf-8'></script>
 
 <script src="{{ STATIC_URL }}horizon/lib/hogan-2.0.0.js" type="text/javascript" charset='utf-8'></script>
 
