--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1,4 +1,5 @@
 @import "../../bootstrap/less/bootstrap.less";
+@import "../../bootstrap/less/datepicker.less";
 
 /* new clearfix */
 .clearfix:after {
