Always load CSS files first
Loading Javascript externals is usually blocking
the browser from processing the file further. Move
CSS file loading to front so that they can happen
in parallel.

Change-Id: I301b3df62269528306b45c947fef49a5fa8dbfeb

--- a/horizon/templates/base.html
+++ b/horizon/templates/base.html
@@ -4,10 +4,11 @@
   <head>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
     <title>{% block title %}{% endblock %} - {% site_branding %}</title>
-    {% include "horizon/_conf.html" %}
+    {% comment %} Load CSS sheets before Javascript  {% endcomment %}
     {% block css %}
       {% include "_stylesheets.html" %}
     {% endblock %}
+    {% include "horizon/_conf.html" %}
     {% include "horizon/client_side/_script_loader.html" %}
   </head>
   <body id="{% block body_id %}{% endblock %}">
