--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -2080,3 +2080,116 @@ label.log-length {
 }
 
 
+
+/* Styling for draged firewall rule object */
+#ruleListSortContainer {
+  display: none;
+}
+.rulelist {
+  padding: 6px;
+  background: #eee;
+  border: 1px solid #ccc;
+  min-height: 2em;
+  width: auto !important;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  li {
+    width: 226px;
+    list-style-type: none;
+    margin: 6px auto;
+    padding: 3px;
+    background: #fff;
+    border: 1px solid #aaa;
+    line-height: 18px;
+    border-radius: 3px;
+    cursor: move;
+    padding-left: 23px;
+    background: white url(/static/dashboard/img/drag.png) no-repeat 11px 50%;
+    em {
+      font-size: 0.5em;
+      line-height: 1em;
+      color:#999;
+      font-style: normal;
+      margin-left: 0.8em;
+    }
+    i {
+      margin-right: 5px;
+      vertical-align: middle;
+    }
+    a.btn {
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      font-size: 11px;
+      line-height: 12px;
+      padding: 2px 5px 3px;
+      margin-right: 1px;
+      width: 18px;
+      text-align: center;
+      //position: absolute;
+      right:5px;
+      vertical-align: middle;
+      float: right;
+      &:before {
+        content: "+";
+      }
+    }
+  }
+  li.ui-sortable-helper {
+    background-color: #def;
+  }
+  li.ui-state-highlight {
+    border: 1px dotted #ccc;
+    background: #efefef;
+    height: 0.5em;
+  }
+  li:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+  }
+}
+#selected_rule {
+  margin-bottom: 1.5em;
+  counter-reset:v1 0;
+  background: #edf9ff;
+  border:1px solid #c0d9e4;
+  li {
+    position: relative;
+    a.btn {
+      &:before {
+        content: "-";
+      }
+    }
+  }
+  li:before {
+    content:"rule:"counter(v1);
+    counter-increment:v1;
+    display: inline-block;
+    margin-right: 5px;
+    background: #666;
+    color:#fff;
+    font-size: 90%;
+    padding: 0px 4px;
+    vertical-align: middle;
+    border-radius: 2px;
+    position: absolute;
+    left: -2em;
+  }
+  &.dragging {
+    li:before {
+      content:"rule:";
+      background-color:rgba(102,102,102,0.5);
+      padding-right: 10px;
+    }
+    li.ui-state-highlight:before {
+      content:"";
+      background:transparent;
+    }
+  }
+
+}
