--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -2085,5 +2085,21 @@ div.network {
   }
 }
 
+/**** Resource Topology CSS ****/
+.link {stroke: #000;stroke-width: 1.5px;}
+.node {cursor:pointer;}
+.node text {font: 12px sans-serif;}
 
+#resource_container {position:relative;}
+#stack_box {position:absolute;width:300px;top:10px;left:10px;}
+#stack_box h3 {font-size:11pt;line-height:20px;}
+#stack_box p {margin:0;font-size:9pt;line-height:14px;}
+#stack_box a {margin:0;font-size:9pt;line-height:14px;}
+#stack_box img {float:left;}
+#stack_box #stack_info {float:left;white-space:normal;width:200px;}
 
+#info_box {position:absolute;width:300px;top:100px;left:10px;}
+#info_box h3 {font-size:9pt;line-height:20px;}
+#info_box p {margin:0;font-size:9pt;line-height:14px;}
+#info_box a {margin:0;font-size:9pt;line-height:14px;}
+#info_box .error {color:darkred;}
