Add column "Uptime" to instances overview
Add column "Uptime" to instances overview
in project and admin panels. Add "Created"
and "Uptime" to instance details view.

fixes bug 1202889

Change-Id: I84559da6ca9ed750a9073dbb6203b49932df34fc

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
@@ -13,6 +13,10 @@
     <dd>{{ instance.id }}</dd>
     <dt>{% trans "Status" %}</dt>
     <dd>{{ instance.status|title }}</dd>
+    <dt>{% trans "Created" %}</dt>
+    <dd>{{ instance.created|parse_isotime }}</dd>
+    <dt>{% trans "Uptime" %}</dt>
+    <dd>{{ instance.created|parse_isotime|timesince }}</dd>
   </dl>
 </div>
 
