--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1367,8 +1367,8 @@ label.log-length {
   margin-top: -60px;
 }
 
-/* Project Membership UI */
-.project_membership {
+/* Membership widget UI */
+.membership {
   min-height: 200px;
 
     /* Buttons */
@@ -1391,7 +1391,7 @@ label.log-length {
     margin-left: 15px;
     margin-bottom: 15px;
   }
-  .users_title {
+  .members_title {
     color: #555;
     font-weight: bold;
     padding-left: 10px;
@@ -1435,16 +1435,16 @@ label.log-length {
     }
   }
 
-  /* User lists */
+  /* Member lists */
   .member {
     padding: 10px;
     text-align: left;
   }
-  .project_members {
+  .members {
     margin-left: -20px;
   }
-  .project_members ul.btn-group,
-  .available_users ul.btn-group {
+  .members ul.btn-group,
+  .available_members ul.btn-group {
     width: 308px;
   }
   .dark_stripe {
@@ -1505,14 +1505,14 @@ label.log-length {
   }
 }
 
-/* Inline user creation */
-.add_user_btn {
+/* Inline member creation */
+.add_member_btn {
   display: inline;
 }
-#add_user {
+#add_member {
   clear: both;
 }
-.add_user {
+.add_member {
   float: right;
   margin-top: 10px;
   margin-right: 15px;
