--- a/horizon/templates/horizon/common/_workflow_step_update_members.html
+++ b/horizon/templates/horizon/common/_workflow_step_update_members.html
@@ -2,34 +2,34 @@
 
 <noscript><h3>{{ step }}</h3></noscript>
 
-<div class="project_membership" data-show-roles="{{ step.show_roles|yesno }}">
+<div class="membership {{ step.slug }}_membership" data-show-roles="{{ step.show_roles|yesno }}">
   <div class="header">
     <div class="help_text">{{ step.help_text }}</div>
     <div class="left">
-      <div class="fake_table fake_table_header">
-        <span class="users_title">{{ step.available_list_title }}</span>
-        <input type="text" name="available_users_filter" id="available_users" class="filter" placeholder="Filter">
+      <div class="fake_table fake_table_header fake_{{ step.slug }}_table">
+        <span class="members_title">{{ step.available_list_title }}</span>
+        <input type="text" name="available_{{ step.slug }}_filter" id="available_{{ step.slug }}" class="filter {{ step.slug }}_filter" placeholder="Filter">
       </div>
     </div>
     <div class="right">
-      <div class="fake_table fake_table_header">
-        <span class="users_title">{{ step.members_list_title }}</span>
-        <input type="text" name="project_members_filter" id="project_members" class="filter" placeholder="Filter">
+      <div class="fake_table fake_table_header fake_{{ step.slug }}_table">
+        <span class="members_title">{{ step.members_list_title }}</span>
+        <input type="text" name="{{ step.slug }}_members_filter" id="{{ step.slug }}_members" class="filter {{ step.slug }}_filter" placeholder="Filter">
       </div>
     </div>
   </div>
 
-  <div class="left filterable">
-    <div class="fake_table" id="available_users">
-      <ul class="available_users"></ul>
-      <ul class="no_results" id="no_available_users"><li>{{ step.no_available_text }}</li></ul>
+  <div class="left filterable {{ step.slug }}_filterable">
+    <div class="fake_table fake_{{ step.slug }}_table" id="available_{{ step.slug }}">
+      <ul class="available_members available_{{ step.slug }}"></ul>
+      <ul class="no_results" id="no_available_{{ step.slug }}"><li>{{ step.no_available_text }}</li></ul>
     </div>
   </div>
 
-  <div class="right filterable">
-    <div class="fake_table" id="project_members">
-      <ul class="project_members"></ul>
-      <ul class="no_results" id="no_project_members"><li>{{ step.no_members_text }}</li></ul>
+  <div class="right filterable {{ step.slug }}_filterable">
+    <div class="fake_table fake_{{ step.slug }}_table" id="{{ step.slug }}_members">
+      <ul class="members {{ step.slug }}_members"></ul>
+      <ul class="no_results" id="no_{{ step.slug }}_members"><li>{{ step.no_members_text }}</li></ul>
     </div>
   </div>
 </div>
@@ -41,10 +41,10 @@
 
 <script>
   if (typeof $ !== 'undefined') {
-    horizon.projects.workflow_init($(".workflow"));
+    horizon.membership.workflow_init($(".workflow"), "{{ step.slug }}", "{{ step.get_id }}");
   } else {
     addHorizonLoadEvent(function() {
-      horizon.projects.workflow_init($(".workflow"));
+      horizon.membership.workflow_init($(".workflow"), "{{ step.slug }}", "{{ step.get_id }}");
     });
   }
 </script>
