Allow translators to control the word order
Closes-Bug #1208807

Change-Id: I2d07a34b3c0479cb6384ef0041f8a6f4c58e1699

--- a/horizon/templates/horizon/common/_usage_summary.html
+++ b/horizon/templates/horizon/common/_usage_summary.html
@@ -4,8 +4,7 @@
   <form action="" method="get" id="date_form" class="form-horizontal">
     <h3>{% trans "Select a period of time to query its usage" %}: </h3>
     <div class="datepicker">
-      <span>{% trans "From" %}: {{ form.start }} </span>
-      <span>{% trans "To" %}: {{ form.end }} </span>
+      {% blocktrans with start=form.start end=form.end %}<span>From: {{ start }} </span><span>To: {{ end }} </span>{% endblocktrans %}
       <button class="btn btn-small" type="submit">{% trans "Submit" %}</button>
       <small>{% trans "The date should be in YYYY-mm-dd format." %}</small>
     </div>
