--- a/horizon/templates/_header.html
+++ b/horizon/templates/_header.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load url from future %}
 <div id="user_info" class="pull-right">
-  <span>{% trans "Logged in as" %}: {{ request.user.username }}</span>
+  <span>{% blocktrans with username=request.user.username %}Logged in as: {{ username }}{% endblocktrans %}</span>
   {% if HORIZON_CONFIG.help_url %}
   <a href="{{ HORIZON_CONFIG.help_url }}" target="_new">{% trans "Help" %}</a>
   {% endif %}
