--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/index.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% load i18n %}
+{% load i18n horizon humanize sizeformat %}
+
 {% block title %}{% trans "Hypervisors" %}{% endblock %}
 
 {% block page_header %}
@@ -7,5 +8,28 @@
 {% endblock page_header %}
 
 {% block main %}
+<div class="quota-dynamic">
+  <h3>{% trans "Hypervisor Summary" %}</h3>
+    <div class="d3_quota_bar">
+    <div class="d3_pie_chart" data-used="{% widthratio stats.vcpus_used stats.vcpus 100 %}"></div>
+     <strong>{% trans "VCPU Usage" %} <br />
+         {% blocktrans with used=stats.vcpus_used|intcomma available=stats.vcpus|intcomma %}Used <span> {{ used }} </span> of <span> {{ available }} </span>{% endblocktrans %}
+     </strong>
+    </div>
+
+    <div class="d3_quota_bar">
+    <div class="d3_pie_chart" data-used="{% widthratio stats.memory_mb_used stats.memory_mb 100 %}"></div>
+     <strong>{% trans "Memory Usage" %} <br />
+         {% blocktrans with used=stats.memory_mb_used|mbformat available=stats.memory_mb|mbformat %}Used <span> {{ used }} </span> of <span> {{ available }} </span>{% endblocktrans %}
+     </strong>
+    </div>
+
+    <div class="d3_quota_bar">
+    <div class="d3_pie_chart" data-used="{% widthratio stats.local_gb_used stats.local_gb 100 %}"></div>
+     <strong>{% trans "Disk Usage" %} <br />
+         {% blocktrans with used=stats.local_gb_used|diskgbformat available=stats.local_gb|diskgbformat %}Used <span> {{ used }} </span> of <span> {{ available }} </span>{% endblocktrans %}
+     </strong>
+    </div>
+</div>
 {{ table.render }}
 {% endblock %}
