--- a/horizon/templates/horizon/common/_data_table_row.html
+++ b/horizon/templates/horizon/common/_data_table_row.html
@@ -1,3 +1,3 @@
 <tr{{ row.attr_string|safe }}>
-  {% for cell in row %}<td{{ cell.attr_string|safe }}>{{ cell.value }}</td>{% endfor %}
+  {% for cell in row %}<td{{ cell.attr_string|safe }}>{%if cell.wrap_list %}<ul>{% endif %}{{ cell.value }}{%if cell.wrap_list %}</ul>{% endif %}</td>{% endfor %}
 </tr>
