--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1701,9 +1701,7 @@ label.log-length {
   border: 1px solid #ccc;
   min-height: 2em;
   width: auto !important;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  .box-sizing(border-box);
   li {
     width: 226px;
     list-style-type: none;
@@ -1728,16 +1726,13 @@ label.log-length {
       vertical-align: middle;
     }
     a.btn {
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
+      .box-sizing(border-box);
       font-size: 11px;
       line-height: 12px;
       padding: 2px 5px 3px;
       margin-right: 1px;
       width: 18px;
       text-align: center;
-      //position: absolute;
       right:5px;
       vertical-align: middle;
       float: right;
@@ -1804,302 +1799,236 @@ label.log-length {
 
 }
 
-/* Styling for network topology */
-.box-sizing(@box: border-box) {
-  -webkit-box-sizing: @box;
-  -moz-box-sizing: @box;
-  -ms-box-sizing: @box;
-  -o-box-sizing: @box;
-  box-sizing: @box;
-}
-
-@-webkit-keyframes progress-bar-stripes {
-  from {
-    background-position: 20px 0;
-  }
-  to {
-    background-position: 0 0;
-  }
-}
-
-@-moz-keyframes progress-bar-stripes {
-  from {
-    background-position: 20px 0;
-  }
-  to {
-    background-position: 0 0;
-  }
-}
-
-@-ms-keyframes progress-bar-stripes {
-  from {
-    background-position: 20px 0;
-  }
-  to {
-    background-position: 0 0;
-  }
-}
-
-@-o-keyframes progress-bar-stripes {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: 20px 0;
-  }
-}
-
-@keyframes progress-bar-stripes {
-  from {
-    background-position: 20px 0;
-  }
-  to {
-    background-position: 0 0;
-  }
-}
-
-#topologyCanvas {
-  .box-sizing();
+/**** Network Topology CSS ****/
+#topologyCanvasContainer {
+  .box-sizing(border-box);
   width: 100%;
-  height: 500px;
+  height: auto;
   padding: 25px;
   padding-left: 50px;
   background: #efefef;
+  min-height: 400px;
   div.nodata {
     font-size: 150%;
-    font-weight: bold;
     text-align: center;
-    padding-top: 200px;
+    padding-top: 150px;
     display: none;
   }
-}
-div.networks {
-  height: 100%;
-}
-div.network {
-  .box-sizing();
-  float: left;
-  width: 270px;
-  height: 100%;
-  position: relative;
-  .nicname {
-    .box-sizing();
-    height: 100%;
-    width: 17px;
-    border-radius: 17px;
-    z-index: 200;
-    color:#fff;
-    position: absolute;
-    left: -8px;
-    top: 0px;
-    cursor: pointer;
-    &:hover {
-      background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
-      background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
-      background-image: -ms-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
-      background-image: -o-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
-      background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
-      background-size: 10px 10px;
-    }
-    &.nourl {
-      cursor: auto;
-      &:hover {
-        background-image:none;
-      }
-    }
-    h3 {
-      font-size: 12px;
-      line-height: 1;
-      position: relative;
-      font-weight: normal;
-      top:55%;
-      color:#fff;
-      left:-1px;
-      letter-spacing: 0.2em;
-      -webkit-transform: rotate(-90deg);
-      -moz-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
-      -o-transform: rotate(-90deg);
-      transform: rotate(-90deg);
-
-      white-space: nowrap;
-      text-shadow: 0px 0px 5px #000;
-    }
-    span.ip {
-      position: absolute;
-      bottom:-10px;
-      left:20px;
-      color: #000;
+  &.noinfo {
+    div.nodata {
       display: block;
-      font-weight: normal;
-      font-size: 90%;
-      letter-spacing: 0.2em;
-      -webkit-transform: rotate(-90deg);
-      -moz-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
-      -o-transform: rotate(-90deg);
-      transform: rotate(-90deg);
-      -webkit-transform-origin: 0% 0%;
-      -moz-transform-origin: 0% 0%;
-      -ms-transform-origin: 0% 0%;
-      -o-transform-origin:  0% 0%;
-      transform-origin:  0% 0%;
-      white-space: nowrap;
-      text-shadow: 0px 0px 2px #fff,0px 0px 2px #fff;
+      
     }
-  }
-  .router, .server, .device {
-    .box-sizing();
-    cursor: pointer;
-    width: 90px;
-    border: 3px solid #444;
-    position: absolute;
-    top:30px;
-    left:90px;
-    color:#fff;
-    padding: 0 3px;
-    background: #666;
-    margin-bottom: 20px;
-    border-radius: 8px;
-    &:before {
-      content: "";
-      width: 20px;
-      height: 20px;
-      border: 2px solid #444;
-      line-height: 1.2;
-      position: absolute;
-      border-radius: 20px;
-      top:-10px;
-      left:-10px;
-      background:#fff url(/static/dashboard/img/router.png) no-repeat center center;
-      background-size: 16px 16px;
+    #topology_canvas {
+      display: none;
     }
-    &:after {
-      content: "";
-      width: 100%;
-      line-height: 1.2;
-      position: absolute;
-      text-align: center;
-      border-radius: 0;
-      background: #444;
-      color: #fff;
-      font-size: 11px;
-      height: 1.5em;
-      bottom:0px;
-      left: 0px;
-    }
-    span.devicename {
-      position: absolute;
-      color: #fff;
-      bottom: 0px;
-      font-size: 12px;
-      line-height: 14px;
-      width: 100%;
-      text-align: center;
-      z-index:300;
-      left:-2px;
-    }
-    span.name {
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      display: block;
-      font-size : 12px;
-      position: relative;
-      z-index:10;
-      text-align: center;
-      top:4px;
-      padding: 0 3px;
-    }
-    div.port {
-      text-align: right;
-      min-width: 90px;
-      height: 10px;
-      font:0px/0px sans-serif;
-      position: absolute;
-      left:-91px;
-      top:8px;
-      background-color: #37a9e3;
-      background-image: none;
-      -webkit-background-size: 20px 20px;
-      -moz-background-size: 20px 20px;
-      -o-background-size: 20px 20px;
-      background-size: 20px 20px;
-      z-index:100;
-      span.ip {
-        .box-sizing();
-        color: #333;
-        font-size: 9px;
-        line-height: 1;
-        text-shadow: 0px -1px #fff;
-        position: relative;
-        width: 90px;
-        display: inline-block;
-        padding-right:8px;
-        padding-left: 8px;
-        word-wrap:break-word;
-        word-break:break-all;
-      }
-      &.right {
-        left:auto;
-        right:-92px;
-        width: 92px;
-        text-align: left;
-        span.ip {
-        }
-      }
-    }
-    &:hover {
-      div.port {
-        cursor:pointer;
-        background-color: #2688c0;
-        -webkit-animation: progress-bar-stripes 1s linear infinite;
-           -moz-animation: progress-bar-stripes 1s linear infinite;
-            -ms-animation: progress-bar-stripes 1s linear infinite;
-             -o-animation: progress-bar-stripes 1s linear infinite;
-                animation: progress-bar-stripes 1s linear infinite;
-        &:hover {
-        -webkit-animation: progress-bar-stripes 0.3s linear infinite;
-           -moz-animation: progress-bar-stripes 0.3s linear infinite;
-            -ms-animation: progress-bar-stripes 0.3s linear infinite;
-             -o-animation: progress-bar-stripes 0.3s linear infinite;
-                animation: progress-bar-stripes 0.3s linear infinite;
-        }
-        &.nourl {
-          cursor: auto;
-          background-image:none;
-          &:hover {
-            background-image:none;
-          }
-        }
-      }
-      border-color: #222;
-      &:after {
-        background-color: #222;
-        border-color: #222;
-      }
-    }
-  }
-  .device {
-    border:none;
-    background: transparent;
-  }
-  .server {
-    &:before {
-      background:#fff url(/static/dashboard/img/server.png) no-repeat center center;
-      background-size: 14px 14px;
-    }
-    background: #fff;
-    color:#333;
   }
 }
 
-.launchButtons {
-  text-align: right;
-  margin: 10px 0px 15px 10px;
-  a.btn {
+.topologyNavi {
+  overflow: hidden;
+  i {margin-right: 3px;}
+  margin: 10px 0 20px;
+  .toggleView {
+    float: left;
+  }
+  .launchButtons {
+    float: right;
+    text-align: right;
+    a.btn {
+      margin-left: 10px;
+    }
+  }
+}
+
+.topologyBalloon {
+  display: none;
+  background: #fff;
+  position: absolute;
+  left:100px;
+  top:20px;
+  z-index: 600;
+  border-radius: 5px;
+  color:#333;
+  min-width: 200px;
+  &.on {
+    display: block;
+  }
+  line-height: 1.2;
+  .vnc_window {
     margin-left: 10px;
   }
+  .closeTopologyBalloon {
+    font-size: 16px;
+    line-height: 1;
+    display: block;
+    position: absolute;
+    font-weight: bold;
+    right: 6px;
+    top: 0px;
+    cursor: pointer;
+    padding: 3px;
+    color:#aaa;
+    &:hover {
+      color:#777;
+      text-decoration: none;
+    }
+  }
+  .contentBody {
+    padding: 8px 8px 0;
+  }
+  span.active, span.down {
+    &:before {
+      content: "";
+      width: 9px;
+      height: 9px;
+      display: inline-block;
+      background: #0d925b;
+      margin-right: 3px;
+      border-radius: 10px;
+      vertical-align: middle;
+    }
+  }
+  span.down {
+    &:before {
+      background: #e64b41;
+    }
+  }
+  .footer {
+    background: #efefef;
+    border-top: 1px solid #d9d9d9;
+    padding: 8px;
+    border-radius: 0px 0px 7px 7px;
+    .footerInner {
+      display: table;
+      width: 100%;
+    }
+    .cell {
+      display: table-cell;
+      padding-right: 10px;
+    }
+    .link {
+      font-size: 12px;
+    }
+    .delete {
+      padding-right: 0;
+      text-align: right;
+      .btn {
+        &:before {
+          content:"Delete ";
+        }
+        &.deleting:before {
+          content:"Deleting ";
+        }
+      }
+      .btn.instance {
+        &:before {
+          content:"Terminate ";
+        }
+        &.deleting:before {
+          content:"Terminating ";
+        }
+      }
+    }
+  }
+  table.detaiInfoTable {
+    margin-bottom: 5px;
+    caption {
+      text-align: left;
+      font-size: 12px;
+      font-weight: bold;
+      margin-bottom: 0px;
+    }
+    th,td {
+      text-align: left;
+      vertical-align: middle;
+      padding-bottom: 3px;
+      background: transparent;
+    }
+    th {
+      color:#999;
+      padding-right: 8px;
+      width: 80px;
+      span {
+        vertical-align: middle;
+        width:80px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: inline-block;
+      }
+      &.device {
+        text-align: right;
+      }
+    }
+    td {
+      padding-right: 5px;
+      white-space: nowrap;
+    }
+    td.delete {
+      padding-right: 0;
+      text-align: right;
+    }
+    .btn {
+      line-height: 1.4;
+    }
+    .btn:before {
+      content:"Delete ";
+    }
+    .btn.deleting:before {
+      content:"Deleting ";
+    }
+  }
+  font-size: 11px;
+  .box-shadow(0px 1px 6px #777);
+  &:before {
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-right: 9px solid #bbb;
+    display: block;
+    position: absolute;
+    top: 30px;
+    left: -9px;
+    width: 0;
+    height: 0;
+    content: "";
+  }
+  &:after {
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-right: 8px solid #fff;
+    display: block;
+    position: absolute;
+    top: 31px;
+    left: -8px;
+    width: 0;
+    height: 0;
+    content: "";
+  }
+  &.leftPosition {
+    &:before {
+      border-right: none;
+      border-left: 9px solid #bbb;
+      right: -9px;
+      top: 30px;
+      left:auto;
+    }
+    &:after {
+      border-right: none;
+      border-left: 8px solid #fff;
+      right: -8px;
+      top: 31px;
+      left:auto;
+    }
+  }
+}
+
+#topologyMessages {
+  width:1px;
+  height:1px;
+  visibility: hidden;
+  position: absolute;
+  top: -100px;
 }
 
 /**** Resource Topology CSS ****/
