Improved boot from volume
In connection to blueprint:
https://blueprints.launchpad.net/nova/+spec/improve-block-device-handling
and extension of nova boot functionality (Image Clone), we propose optimaze
web-interface of launche VM instances and reflect new Nova functionalities.

Tab "Volumes" was moved to "Details" and called as "Instance Boot Source"
section in the "Launche instance" pop-up window.
The field "Instance Boot Source" contains following options:
- Boot from image.
- Boot from snapshot.
- Boot from volume.
- Boot from image (creates a new volume).
- Boot from volume snapshot (creates a new volume).

For option "Boot from image (creates a new volume)" we added new field
"Device size (GB)", to determine size of volume. It's required for Nova.

Implements: blueprint improved-boot-from-volume

Change-Id: I92ee5704d70c32b2c73c60c4d424d7d6d320ab24

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
@@ -94,18 +94,24 @@
 </div>
 
 <div class="volumes row-fluid detail">
-  <h4>{% trans "Volumes Attached" %}</h4>
-  <hr class="header_rule">
+    <h4>{% trans "Volumes Attached" %}</h4>
+    <hr class="header_rule">
     <dl>
-      {% for volume in instance.volumes %}
+    {% for volume in instance.volumes %}
         <dt>{% trans "Attached To" %}</dt>
         <dd>
-          <a href="{% url 'horizon:project:volumes:detail' volume.volumeId %}">{{ volume.name }}</a><span> {% trans "on" %} {{ volume.device }}</span>
+            <a href="{% url 'horizon:project:volumes:detail' volume.volumeId %}">
+            {% if volume.name %}
+                {{ volume.name }}
+            {%  else %}
+                {{ volume.volumeId }}
+            {% endif %}
+            </a>
+            <span> {% trans "on" %} {{ volume.device }}</span>
         </dd>
         {% empty %}
-          <dt>{% trans "Volume" %}</dt>
-          <dd><em>{% trans "No volumes attached." %}</em></dd>
-      {% endfor %}
+        <dt>{% trans "Volume" %}</dt>
+        <dd><em>{% trans "No volumes attached." %}</em></dd>
+    {% endfor %}
     </dl>
-  </dl>
 </div>
