Adding Rickshaw as dependency
- adding rickshaw.js library for time series charts.

Implements: blueprint horizon-chart.js
Change-Id: I59526c529b6cdb7330d1ee69ed7c552f42791af3

--- a/openstack_dashboard/templates/_stylesheets.html
+++ b/openstack_dashboard/templates/_stylesheets.html
@@ -2,6 +2,7 @@
 
 {% compress css %}
 <link href='{{ STATIC_URL }}dashboard/less/horizon.less' type='text/less' media='screen' rel='stylesheet' />
+<link href='{{ STATIC_URL }}dashboard/less/rickshaw.css' type='text/css' media='screen' rel='stylesheet' />
 {% endcompress %}
 
 <link rel="shortcut icon" href="{{ STATIC_URL }}dashboard/img/favicon.ico"/>
