Adding reusable Line Chart
- adding reusable linechart based on Rickshaw and D3 libraries.

Change-Id: I0e1839ca3502ed8242bf52fa5e8949f4e6f20172
Implements: blueprint horizon-chart.js

--- a/horizon/templates/horizon/_scripts.html
+++ b/horizon/templates/horizon/_scripts.html
@@ -40,6 +40,7 @@
 <script src='{{ STATIC_URL }}horizon/js/horizon.d3piechart.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/horizon.heattop.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/lib/rickshaw.js' type='text/javascript' charset='utf-8'></script>
+<script src='{{ STATIC_URL }}horizon/js/horizon.d3linechart.js' type='text/javascript' charset='utf-8'></script>
 
 {% block custom_js_files %}{% endblock %}
 {% endcompress %}
