--- a/openstack_dashboard/templates/_stylesheets.html
+++ b/openstack_dashboard/templates/_stylesheets.html
@@ -3,6 +3,7 @@
 {% compress css %}
 <link href='{{ STATIC_URL }}dashboard/less/horizon.less' type='text/less' media='screen' rel='stylesheet' />
 <link href='{{ STATIC_URL }}dashboard/less/rickshaw.css' type='text/css' media='screen' rel='stylesheet' />
+<link href='{{ STATIC_URL }}dashboard/less/horizon_charts.less' type='text/less' media='screen' rel='stylesheet' />
 {% endcompress %}
 
 <link rel="shortcut icon" href="{{ STATIC_URL }}dashboard/img/favicon.ico"/>
