Add metering panel to admin console
Now it has usage tables for disk usage,
network traffic usage, network(neutron) usage,
objectstore usage, all agregates of project.

A multiseries linechart with choosable meters, group by, value and time
span.

Reasonable amount of tests implemented over all resource usage tabs.

Change-Id: I21342d595ee08da45707e909f3d9802707d912cc
Implements: blueprint admin-resource-usage-page

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -2031,6 +2031,7 @@ label.log-length {
   top: -100px;
 }
 
+
 /**** Resource Topology CSS ****/
 .link {stroke: #999;stroke-width: 1.5px;}
 .node {cursor:pointer;}
@@ -2049,3 +2050,24 @@ label.log-length {
 #info_box p {margin:0;font-size:9pt;line-height:14px;}
 #info_box a {margin:0;font-size:9pt;line-height:14px;}
 #info_box .error {color:darkred;}
+
+#ceilometer-stats .form-horizontal {
+  .control-label {
+    width: auto;
+  }
+  .controls {
+    float: left;
+    margin-left: 0;
+  }
+  .control-group {
+    float: left;
+    margin-right: 20px;
+  }
+  .btn {
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 18px;
+  }
+}
+
+
