Implement required field indicator
Change Horizon's use of forms to set 'required' css class for required fields.
Change template _form_fields.html to include Django field classes in order
to honor above setting.
Also changed horizon workflow to set "required" class on tabs of steps
that contain required fields.

Horizon CSS appends an asterisk after the field label
and tab text based on "required" classname.
The current indicator is based on review with horizon UX
people and can be customized easily.

Change-Id: I03261328d70abcefd13f609088ccb4d58ef30067
Implements: blueprint required-fields

--- a/horizon/templates/horizon/common/_form_fields.html
+++ b/horizon/templates/horizon/common/_form_fields.html
@@ -7,7 +7,7 @@
   </div>
 {% endif %}
 {% for field in form.visible_fields %}
-  <div class="control-group form-field clearfix{% if field.errors %} error{% endif %}">
+  <div class="control-group form-field clearfix{% if field.errors %} error{% endif %} {{ field.css_classes }}">
     {{ field.label_tag }}
     {% if field.errors %}
       {% for error in field.errors %}
