--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1144,6 +1144,15 @@ form div.clearfix.error {
   content: "*";
 }
 
+.nav-tabs li.required a:after,
+form .form-field.required > label:after {
+  content: "*";
+  font-weight: bold;
+  line-height: 0;
+  padding-left: 4px;
+  color: #3290c0;
+}
+
 /* Region selector in header */
 
 #region_selector {
