Define flavor for each project
Change CreateFlavor/EditFlavor forms to CreateFlavor/UpdateFlavor
workflows. Provide access flavor management in each project. Add
the filtering function in Flavors page.

Implements blueprint define-flavor-for-project

Change-Id: I723bbf250a46af8de58de06a907f6efc737778db

--- a/openstack_dashboard/dashboards/admin/flavors/templates/flavors/_update.html
+++ b/openstack_dashboard/dashboards/admin/flavors/templates/flavors/_update.html
@@ -3,7 +3,7 @@
 {% load url from future %}
 
 {% block form_id %}edit_flavor_form{% endblock %}
-{% block form_action %}{% url 'horizon:admin:flavors:edit' flavor_id %}{% endblock %}
+{% block form_action %}{% url 'horizon:admin:flavors:update' flavor_id %}{% endblock %}
 
 {% block modal_id %}edit_flavor_modal{% endblock %}
 {% block modal-header %}{% trans "Edit Flavor" %}{% endblock %}
