Remove test string from translation files
Closes-Bug: #1221123

Removing unnecessary translation strings reduces translation work.
String Freeze is enabled so this patch also update en PO files.

Change-Id: Ie69c8d0b990e53678262457094852b1ef4966b8b

--- a/horizon/test/test_dashboards/cats/kittens/templates/kittens/index.html
+++ b/horizon/test/test_dashboards/cats/kittens/templates/kittens/index.html
@@ -1,9 +1,8 @@
 {% extends 'cats/base.html' %}
-{% load i18n %}
-{% block title %}{% trans "Kittens" %}{% endblock %}
+{% block title %}Kittens{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Kittens") %}
+  {% include "horizon/common/_page_header.html" with title="Kittens" %}
 {% endblock page_header %}
 
 {% block cats_main %}
