--- a/horizon/test/test_dashboards/cats/tigers/templates/tigers/index.html
+++ b/horizon/test/test_dashboards/cats/tigers/templates/tigers/index.html
@@ -1,9 +1,8 @@
 {% extends 'cats/base.html' %}
-{% load i18n %}
-{% block title %}{% trans "Tigers" %}{% endblock %}
+{% block title %}Tigers{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Tigers") %}
+  {% include "horizon/common/_page_header.html" with title="Tigers" %}
 {% endblock page_header %}
 
 {% block cats_main %}
