--- a/horizon/test/test_dashboards/dogs/puppies/templates/puppies/index.html
+++ b/horizon/test/test_dashboards/dogs/puppies/templates/puppies/index.html
@@ -1,9 +1,8 @@
 {% extends 'dogs/base.html' %}
-{% load i18n %}
-{% block title %}{% trans "Puppies" %}{% endblock %}
+{% block title %}Puppies{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Puppies") %}
+  {% include "horizon/common/_page_header.html" with title="Puppies" %}
 {% endblock page_header %}
 
 {% block dogs_main %}
