--- a/openstack_dashboard/dashboards/project/vpn/templates/vpn/_ipsecpolicy_details.html
+++ b/openstack_dashboard/dashboards/project/vpn/templates/vpn/_ipsecpolicy_details.html
@@ -3,37 +3,37 @@
 <div class="info row-fluid detail">
   <hr class="header_rule">
   <dl>
-    <dt>{% trans "ID:" %}</dt>
+    <dt>{% trans "Name" %}</dt>
+    <dd>{{ ipsecpolicy.name|default:_("None") }}</dd>
+
+    <dt>{% trans "Description" %}</dt>
+    <dd>{{ ipsecpolicy.description|default:_("None") }}</dd>
+
+    <dt>{% trans "ID" %}</dt>
     <dd>{{ ipsecpolicy.id }}</dd>
 
-    <dt>{% trans "Tenant ID:" %}</dt>
+    <dt>{% trans "Project ID" %}</dt>
     <dd>{{ ipsecpolicy.tenant_id }}</dd>
 
-    <dt>{% trans "Name:" %}</dt>
-    <dd>{{ ipsecpolicy.name }}</dd>
-
-    <dt>{% trans "Description:" %}</dt>
-    <dd>{{ ipsecpolicy.description }}</dd>
-
-    <dt>{% trans "Authorization algorithm:" %}</dt>
+    <dt>{% trans "Authorization algorithm" %}</dt>
     <dd>{{ ipsecpolicy.auth_algorithm }}</dd>
 
-    <dt>{% trans "Encapsulation mode:" %}</dt>
+    <dt>{% trans "Encapsulation mode" %}</dt>
     <dd>{{ ipsecpolicy.encapsulation_mode }}</dd>
 
-    <dt>{% trans "Encryption algorithm:" %}</dt>
+    <dt>{% trans "Encryption algorithm" %}</dt>
     <dd>{{ ipsecpolicy.encryption_algorithm }}</dd>
 
-    <dt>{% trans "Lifetime Units:" %}</dt>
+    <dt>{% trans "Lifetime Units" %}</dt>
     <dd>{{ ipsecpolicy.lifetime.units }}</dd>
 
-    <dt>{% trans "Lifetime Value:" %}</dt>
+    <dt>{% trans "Lifetime Value" %}</dt>
     <dd>{{ ipsecpolicy.lifetime.value }}</dd>
 
-    <dt>{% trans "Perfect Forward Secrecy:" %}</dt>
+    <dt>{% trans "Perfect Forward Secrecy" %}</dt>
     <dd>{{ ipsecpolicy.pfs }}</dd>
 
-    <dt>{% trans "Transform Protocol:" %}</dt>
+    <dt>{% trans "Transform Protocol" %}</dt>
     <dd>{{ ipsecpolicy.transform_protocol }}</dd>
   </dl>
 </div>
