Show IPSec Site Connection in VPN service detail
IPSec Site connections associated with VPN service are useful information.
Previously the field "VPN Connections" exist but the associated connections
are not displayed.

Closes-Bug: #1222256

Change-Id: I81da5cc6b63463102c3270fead8921bf8c10d11a

--- a/openstack_dashboard/dashboards/project/vpn/templates/vpn/_vpnservice_details.html
+++ b/openstack_dashboard/dashboards/project/vpn/templates/vpn/_vpnservice_details.html
@@ -22,7 +22,11 @@
     <dd>{{ vpnservice.subnet_id }}</dd>
 
     <dt>{% trans "VPN Connections" %}</dt>
-    <dd>{{ vpnservice.vpnconnections }}</dd>
+    <dd>
+      {% for conn in vpnservice.vpnconnections %}
+      {{ conn.id }}<br>
+      {% endfor %}
+    </dd>
 
     <dt>{% trans "Admin State" %}</dt>
     <dd>{{ vpnservice.admin_state_up }}</dd>
