Create links between VPN resources
This commit creates cross links between VPN resource
and resolves VPN related resource UUID to its name.
This helps users to track VPN resources.

Closes-Bug: #1222264

This commit also improves an error handling when an error occurs
during retrieving a resource detail via API call.
While previously a detail page without item values is displayed,
now the index page is displayed for such case.

Change-Id: I53e03bf01ad0f359b889115068b1548c9a61ae8d

--- a/openstack_dashboard/dashboards/project/vpn/templates/vpn/_vpnservice_details.html
+++ b/openstack_dashboard/dashboards/project/vpn/templates/vpn/_vpnservice_details.html
@@ -1,4 +1,5 @@
 {% load i18n sizeformat parse_date %}
+{% load url from future %}
 
 <div class="info row-fluid detail">
   <hr class="header_rule">
@@ -16,15 +17,18 @@
     <dd>{{ vpnservice.tenant_id }}</dd>
 
     <dt>{% trans "Router ID" %}</dt>
-    <dd>{{ vpnservice.router_id }}</dd>
+    {% url 'horizon:project:routers:detail' vpnservice.router_id as router_url %}
+    <dd><a href="{{ router_url}}">{{ vpnservice.router.name_or_id }}</a></dd>
 
     <dt>{% trans "Subnet ID" %}</dt>
-    <dd>{{ vpnservice.subnet_id }}</dd>
+    {% url 'horizon:project:networks:subnets:detail' vpnservice.subnet_id as subnet_url %}
+    <dd><a href="{{ subnet_url}}">{{ vpnservice.subnet.name_or_id }}</a></dd>
 
     <dt>{% trans "VPN Connections" %}</dt>
     <dd>
       {% for conn in vpnservice.vpnconnections %}
-      {{ conn.id }}<br>
+      {% url 'horizon:project:vpn:ipsecsiteconnectiondetails' conn.id as conn_url %}
+      <a href="{{ conn_url }}">{{ conn.name_or_id }}</a><br>
       {% endfor %}
     </dd>
 
