--- a/openstack_dashboard/dashboards/project/vpn/templates/vpn/_ipsecsiteconnection_details.html
+++ b/openstack_dashboard/dashboards/project/vpn/templates/vpn/_ipsecsiteconnection_details.html
@@ -1,4 +1,5 @@
 {% load i18n sizeformat parse_date %}
+{% load url from future %}
 
 <div class="info row-fluid detail">
   <hr class="header_rule">
@@ -16,13 +17,16 @@
     <dd>{{ ipsecsiteconnection.tenant_id }}</dd>
 
     <dt>{% trans "VPN Service" %}</dt>
-    <dd>{{ ipsecsiteconnection.vpnservice_id }}</dd>
+    {% url 'horizon:project:vpn:vpnservicedetails' ipsecsiteconnection.vpnservice_id as vpnservice_url %}
+    <dd><a href="{{ vpnservice_url}}">{{ ipsecsiteconnection.vpnservice.name_or_id }}</a></dd>
 
     <dt>{% trans "IKE Policy" %}</dt>
-    <dd>{{ ipsecsiteconnection.ikepolicy_id }}</dd>
+    {% url 'horizon:project:vpn:ikepolicydetails' ipsecsiteconnection.ikepolicy_id as ikepolicy_url %}
+    <dd><a href="{{ ikepolicy_url}}">{{ ipsecsiteconnection.ikepolicy.name_or_id }}</a></dd>
 
     <dt>{% trans "IPSec Policy" %}</dt>
-    <dd>{{ ipsecsiteconnection.ipsecpolicy_id }}</dd>
+    {% url 'horizon:project:vpn:ipsecpolicydetails' ipsecsiteconnection.ipsecpolicy_id as ipsecpolicy_url %}
+    <dd><a href="{{ ipsecpolicy_url}}">{{ ipsecsiteconnection.ipsecpolicy.name_or_id }}</a></dd>
 
     <dt>{% trans "Remote peer IP Address" %}</dt>
     <dd>{{ ipsecsiteconnection.peer_address }}</dd>
