storage.object.container ceilometer stat incorrectly set
fix storage.object.container value in stats.html

Change-Id: Ie63c3b96ea2e0c048a32b544416b7bffa7ee0b64
Fixes:Bug #1222920

--- a/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
+++ b/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
@@ -53,7 +53,7 @@
           <optgroup label='{% trans "Object Storage (Swift)" %}'>
             <option title='{% trans "Number of objects" %}' value="storage.objects" data-unit="">storage.objects</option>
             <option title='{% trans "Total size of stored objects" %}' value="storage.objects.size" data-unit="">storage.objects.size</option>
-            <option title='{% trans "Number of containers" %}' value="" data-unit="storage.objects.containers">storage.objects.containers</option>
+            <option title='{% trans "Number of containers" %}' value="storage.objects.containers" data-unit="">storage.objects.containers</option>
             <option title='{% trans "Number of incoming bytes" %}' value="storage.objects.incoming.bytes" data-unit="">storage.objects.incoming.bytes</option>
             <option title='{% trans "Number of outgoing bytes" %}' value="storage.objects.outgoing.bytes" data-unit="">storage.objects.outgoing.bytes</option>
             <option title='{% trans "Number of API requests against swift" %}' value="storage.api.request" data-unit="">storage.api.request</option>
