Standardize display name on detail pages
* Standardized overview pages for volume, image and snapshot
as per the instance overview page.

Fixes bug #1207770

Change-Id: I7ae48542f4c8732c92dc4393dbaaea81158d34d6

--- a/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/detail.html
+++ b/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/detail.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% load i18n %}
 
-{% block title %}{% trans "Image Detail "%}{% endblock %}
+{% block title %}{% trans "Image Details"%}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title="Image Detail" %}
+  {% include "horizon/common/_page_header.html" with title=_("Image Details: ")|add:image.name|default:_("Image Details:") %}
 {% endblock page_header %}
 
 {% block main %}
