--- a/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/snapshots/detail.html
+++ b/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/snapshots/detail.html
@@ -3,9 +3,8 @@
 {% block title %}{% trans "Volume Snapshot Details" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Volume Snapshot Detail") %}
+  {% include "horizon/common/_page_header.html" with title=_("Volume Snapshot Details: ")|add:snapshot.display_name|default:_("Volume Snapshot Details:") %}
 {% endblock page_header %}
-
 {% block main %}
 <div class="row-fluid">
   <div class="span12">
