--- a/openstack_dashboard/dashboards/project/volumes/templates/volumes/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/volumes/templates/volumes/_detail_overview.html
@@ -1,7 +1,7 @@
 {% load i18n sizeformat parse_date %}
 {% load url from future %}
 
-<h3>{% trans "Volume Overview" %}: {{volume.display_name }}</h3>
+<h3>{% trans "Volume Overview" %}</h3>
 
 <div class="info row-fluid detail">
   <h4>{% trans "Info" %}</h4>
